--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ SWAGGER_TITLE="WIN CRYPTO AI API"
 SWAGGER_DESCRIPTION="The WIN CRYPTO AI API"
 SWAGGER_VERSION="1.0"
 # Primary Database
-DB_PRIMARY_HOST=localhost
+DB_PRIMARY_HOST="localhost"
 DB_PRIMARY_PORT=5432
-DB_PRIMARY_USERNAME=postgres
-DB_PRIMARY_PASSWORD=Abc12345
-DB_PRIMARY_DATABASE=win_crypto_db
+DB_PRIMARY_USERNAME="postgres"
+DB_PRIMARY_PASSWORD="Abc@12345"
+DB_PRIMARY_DATABASE="win_crypto_db"
 DB_PRIMARY_SYNCHRONIZE=false
 DB_PRIMARY_SSL=false
 DB_PRIMARY_SSL_REJECT_UNAUTHORIZED=true
