--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "stop:prod": "pm2 delete pm2-prod.config.js",
+    "start:prod": "yarn stop:prod && yarn build && pm2 start pm2-prod.config.js",
     "make-index": "node ./scripts/index.js",
     "make-index-enums": "yarn make-index src/common/enums",
     "make-index-entity-primary": "yarn make-index src/entities/primary",
