--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "8.0.1",
+    "@nestjs/websockets": "^10.4.15",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -45,7 +47,6 @@
     "class-validator-jsonschema": "^5.0.1",
     "dayjs": "^1.11.13",
     "extensionsjs": "^1.1.7",
-    "firebase-admin": "^13.0.0",
     "nanoid": "3.3.4",
     "nestjs-i18n": "^10.5.0",
     "pg": "^8.13.0",
